--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <script type="text/javascript" src="http://canoescotland.org/sites/all/themes/basestation_open/js/riverLevels.js?p347k9"></script>
 </head>
 
-<body>
+<body style="background: white">
 <p><a href="http://www.andyjacksonfund.org.uk"><img src="andy-jackson-fund.png" width="560" height="86" /></a>
 <a href="http://canoescotland.org"><img src="scottish-canoe-association-social.jpg" width="400" height="157" /></a></p>
 
