--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <h2>Scottish River Levels</h2>
 
 <ul>
-<li><a href="where-the-water.php">Map View</a></li>
+<li><a href="wheres-the-water.php">Map View</a></li>
 <li><a href="TODO">List View</a></li>
 </ul>
 
