--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <p>SCA Where's the Water uses <a href="
 <a href="http://apps.sepa.org.uk/waterlevels/">water level data from SEPA</a>.</p>
 
-<p>Code written and maintained by <a href="http://www.edinburghlinux.co.uk">Jonathan Riddell</a>, patched and bug reports welcome, <a href="https://github.com/jriddell/wheres-the-water">Where's the Water on GitHub</a>.</p>
+<p>Code written and maintained by <a href="http://www.edinburghlinux.co.uk">Jonathan Riddell</a>. <a href="https://github.com/jriddell/wheres-the-water">Code on GitHub</a>.  <a href="https://github.com/jriddell/wheres-the-water/issues">Code bugs and features</a>.  TODO: river level report  TODO: river addition/alteration request report</p>
 
 </body>
 </html>
