--- a/admin/index.html
+++ b/admin/index.html
@@ -8,6 +8,7 @@
 <ul>
 <li><a href="download-river-readings.php">Download River Readings</a></li>
 <li><a href="river-section.php">Edit River Sections</a></li>
+<li><a href="update-code.php">Update SCA Server Code from Git</a></li>
 </ul>
 </body>
 </html>
