--- a/leaflet/index.html
+++ b/leaflet/index.html
@@ -61,6 +61,10 @@
             text-decoration: underline;
             color: blue;
         }
+        .js-calib-table-content {
+            border-collapse: separate;
+            border-spacing: 1px;
+        }
     </style>  
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"
     integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
@@ -84,7 +88,7 @@
         });
         
         var osmLayer = L.tileLayer( 'https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-            attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+            attribution: 'Map &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap contributors</a> | <a href="https://github.com/jriddell/wheres-the-water">River Data</a> by SCA'
         }).addTo( map );
         
         /* Old and ugly but something to aim for in the future
