--- a/admin/index.html
+++ b/admin/index.html
@@ -9,7 +9,7 @@
 <li><a href="download-river-readings.php">Download River Readings</a></li>
 <li><a href="river-section.php">Edit River Sections</a></li>
 <li><a href="update-code.php">Update SCA Server Code from Git</a></li>
-<li><a href="update-code.php">Update SEPA Classifications</a></li>
+<li><a href="update-classifications.php">Update SEPA Classifications</a></li>
 </ul>
 </body>
 </html>
