new page to show missing charts

--- a/admin/index.html
+++ b/admin/index.html
@@ -11,6 +11,7 @@
 <li><a href="update-code.php">Update SCA Server Code from Git</a></li>
 <li><a href="update-classifications.php">Update SEPA Classifications</a></li>
 <li><a href="update-thumbs.php">Update Farson Camera Thumbs</a></li>
+<li><a href="missing-riverzone-charts.php">Missing RiverZone Stations/Gauges</a></li>
 </ul>
 </body>
 </html>
