feature to add Add RiverZone URLs into River Sections so they can be used from javascript on the map

--- a/admin/index.html
+++ b/admin/index.html
@@ -12,6 +12,7 @@
 <li><a href="update-classifications.php">Update SEPA Classifications</a></li>
 <li><a href="update-thumbs.php">Update Farson Camera Thumbs</a></li>
 <li><a href="missing-riverzone-charts.php">Missing RiverZone Stations/Gauges</a></li>
+<li><a href="riverzone-urls-into-river-section.php">Add RiverZone URLs into River Sections</a></li>
 </ul>
 </body>
 </html>
