--- a/admin/index.html
+++ b/admin/index.html
@@ -8,6 +8,7 @@
 <ul>
 <li><a href="download-river-readings.php">Download River Readings</a></li>
 <li><a href="river-section.php">Edit River Sections</a></li>
+<li><a href="scheduled-section.php">Edit Scheduled Sections</a></li>
 <li><a href="update-code.php">Update SCA Server Code from Git</a></li>
 <li><a href="update-classifications.php">Update SEPA Classifications</a></li>
 <li><a href="update-thumbs.php">Update Farson Camera Thumbs</a></li>
