--- a/admin/index.html
+++ b/admin/index.html
@@ -14,6 +14,7 @@
 <li><a href="update-thumbs.php">Update Farson Camera Thumbs</a></li>
 <li><a href="missing-riverzone-charts.php">Missing RiverZone Stations/Gauges</a></li>
 <li><a href="riverzone-urls-into-river-section.php">Add RiverZone URLs into River Sections</a></li>
+<li><a href="add-uuids.php">Add UUIDs</a></li>
 </ul>
 </body>
 </html>
