--- a/admin/index.html
+++ b/admin/index.html
@@ -15,6 +15,7 @@
 <li><a href="missing-riverzone-charts.php">Missing RiverZone Stations/Gauges</a></li>
 <li><a href="riverzone-urls-into-river-section.php">Add RiverZone URLs into River Sections</a></li>
 <li><a href="add-uuids.php">Add UUIDs</a></li>
+<li><a href="add-level-tsid.php">Add SEPA Timeseries 15minute Level TS_IDs</a></li>
 </ul>
 </body>
 </html>
