--- a/leaflet/index.html
+++ b/leaflet/index.html
@@ -90,7 +90,7 @@
         });
         
         var osmLayer = L.tileLayer( 'https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-            attribution: 'Map &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap contributors</a> | <a href="https://github.com/jriddell/wheres-the-water">River Data</a> by SCA'
+            attribution: 'Map &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap contributors</a> | <a href="https://github.com/jriddell/wheres-the-water">River Data</a> by Jonathan Riddell'
         }).addTo( map );
         
         /* Old and ugly but something to aim for in the future
